Un par de cambios
ConsultaAlumnoPorMateriaView ahora incluye la nota en la tabla de alumnos,
InscripcionData ahora incluye una funcion que facilita el proceso de encontrar la nota de un alumno para la material.

Tambien le hice una limpieza a GestionMateriasView

--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionMateriasView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionMateriasView.form
@@ -97,12 +97,12 @@
             <AuxValue name="classDetails" type="java.lang.String" value="Box.Filler.HorizontalStrut"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JButton" name="jbActualizar">
+        <Component class="javax.swing.JButton" name="jbEditar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Editar"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbActualizarActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbEditarActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jbGuardar">
@@ -110,12 +110,12 @@
             <Property name="text" type="java.lang.String" value="Guardar"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jbSalir">
+        <Component class="javax.swing.JButton" name="jbLimpiar">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Salir"/>
+            <Property name="text" type="java.lang.String" value="Limpiar"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSalirActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbLimpiarActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
