vista de manipulacion de notas

--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/UniversidadVista.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/UniversidadVista.form
@@ -92,6 +92,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Manipulaci&#xf3;n de notas"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jManipNotasActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
