--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionInscripcionView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionInscripcionView.form
@@ -193,6 +193,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Anular Inscripcion"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbAnularActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbSalir">
       <Properties>
