ManipulacionNotasView notas no existentes
usa -1 en la db, interpreta -1 como null, null se obtiene como 0.0

GestionMateriasView ahora el boton guardar funciona

GestionInscripcionView modificada tabla para que interprete -1 como null

ConsultaAlumnoPorMateriaView Modificada tabla para que interprete -1 como null.

--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionMateriasView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionMateriasView.form
@@ -121,6 +121,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Guardar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbGuardarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jbLimpiar">
           <Properties>
@@ -219,9 +222,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JRadioButton" name="jbEstado">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbEstadoActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
