--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionInscripcionView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionInscripcionView.form
@@ -9,6 +9,9 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[406, 350]"/>
     </Property>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[489, 467]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
