--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/ManipulacionNotasView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/ManipulacionNotasView.form
@@ -8,6 +8,9 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[380, 420]"/>
     </Property>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[489, 449]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
